--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = bundle/zencoding-vim
 	url = http://github.com/mattn/zencoding-vim.git
 
+[submodule "bundle/cocoa.vim"]
+	path = bundle/cocoa.vim
+	url = git://github.com/msanders/cocoa.vim.git
