--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,12 @@
 [submodule "bundle/emmet-vim"]
 	path = bundle/emmet-vim
 	url = https://github.com/mattn/emmet-vim.git
+[submodule "bundle/bootstrap-snippets"]
+	path = bundle/bootstrap-snippets
+	url = git://github.com/bonsaiben/bootstrap-snippets.git
+[submodule "bundle/tlib_vim"]
+	path = bundle/tlib_vim
+	url = https://github.com/tomtom/tlib_vim.git
+[submodule "bundle/vim-addon-mw-utils"]
+	path = bundle/vim-addon-mw-utils
+	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
