--- a/.gitmodules
+++ b/.gitmodules
@@ -133,3 +133,9 @@
 [submodule "dictionary"]
 	path = dictionary
 	url = https://github.com/chenpc/ydict.git
+[submodule "bundle/vim-airline"]
+	path = bundle/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
+[submodule "bundle/vim-airline-themes"]
+	path = bundle/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes.git
