--- a/.gitmodules
+++ b/.gitmodules
@@ -66,7 +66,8 @@
 	url = https://github.com/briancollins/vim-jst.git
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim.git
+	url = https://github.com/ctrlpvim/ctrlp.vim
+	
 [submodule "bundle/ack"]
 	path = bundle/ack
 	url = https://github.com/mileszs/ack.vim.git
